<resources>
  <string name="app_name">Miku</string>
  <string name="feeds">视频流</string>
  <string name="discover">探索发现</string>
  <string name="profile">我的主页</string>
  <string name="create">创作视频</string>
  <string name="version">版本</string>
  <string name="hours_ago">小时前</string>
  <string name="hour_ago">小时前</string>
  <string name="days_ago">天前</string>
  <string name="day_ago">天前</string>
  <string name="just">刚刚</string>
  <string name="minutes">分钟前</string>
  <string name="minute">分钟前</string>
  <string name="followed">的关注</string>
  <string name="followed_lower_case">关注</string>
  <string name="fans">的粉丝</string>
  <string name="favorites_lower_case">喜欢</string>
  <string name="favorites">喜欢的视频</string>
  <string name="fans_lower_case">粉丝</string>
  <string name="follower">粉丝</string>
  <string name="update">更新</string>
  <string name="created_action_item_text_format">第 %1$s条 时长 %2$s秒</string>
  <string name="sound">原声</string>
  <string name="videos">视频</string>
  <string name="video">视频</string>
  <string name="check_his_videos">查看更多</string>
  <string name="check_more_videos">查看更多</string>
  <string name="edited_video">编辑效果</string>
  <string name="music">背景乐</string>
  <string name="preview">预览</string>
  <string name="local_music">从本地选取</string>
  <string name="normal">正常速度</string>
  <string name="scale">调整</string>
  <string name="record_history">编辑纪录</string>
  <string name="choose_music_note">拖拽来调整音乐的开头</string>
  <string name="choose_frame_name">选择一个样式</string>
  <string name="mix_run_man">选择你的综艺体</string>
  <string name="choose_filter_name">选择一个滤镜</string>
  <string name="filter_name_origin">原味</string>
  <string name="filter_name_einstein">爱因斯坦</string>
  <string name="filter_name_isabella">伊莎贝拉</string>
  <string name="filter_name_kyoto">京都物语</string>
  <string name="filter_name_lomo">LOMO</string>
  <string name="filter_name_city">重庆森林</string>
  <string name="filter_name_velvet">蓝丝绒</string>
  <string name="filter_name_pink">粉</string>
  <string name="filter_name_rain">空山新雨</string>
  <string name="filter_name_monet">莫奈花园</string>
  <string name="filter_name_fuji">富士山</string>
  <string name="filter_name_hitchcock">希区柯克</string>
  <string name="filter_name_gardon">柠檬草</string>
  <string name="filter_name_oz">绿野仙踪</string>
  <string name="filter_name_firefly">萤火虫</string>
  <string name="filter_name_hugo">雨果</string>
  <string name="filter_name_paris">巴黎</string>
  <string name="filter_name_latte">拿铁</string>
  <string name="filter_name_sunlight">日光倾城</string>
  <string name="filter_name_frost">霜降</string>
  <string name="filter_name_waves">鼓浪屿</string>
  <string name="filter_name_cappuccino">卡布奇诺</string>
  <string name="filter_name_sakura">樱花</string>
  <string name="filter_name_chaplin">卓别林</string>
  <string name="discover_header_title">发现用户</string>
  <string name="discover_header_subtitle">查找和发现有趣的人</string>
  <string name="message">私信</string>
  <string name="comments">消息</string>
  <string name="notification">通知</string>
  <string name="more">更多</string>
  <string name="video_detail_more">更多</string>
  <string name="likes">喜欢</string>
  <string name="action_settings">设置</string>
  <string name="user_block">对方已拉黑</string>
  <string name="run_man_sound_005_qiang">卡通005(撞墙)</string>
  <string name="run_sound_009_ding">卡通009(叮)</string>
  <string name="run_man_sound_013_ping">卡通013(呯)</string>
  <string name="run_man_sound_014_beng">卡通014(嘣)</string>
  <string name="run_man_sound_015_duang">卡通015(Duang)</string>
  <string name="run_man_sound_017_du">卡通017(嘟)</string>
  <string name="run_man_sound_019_pu">卡通019(噗)</string>
  <string name="run_man_sound_020_za">卡通020(砸)</string>
  <string name="run_man_sound_026_tan">卡通026(弹)</string>
  <string name="run_man_sound_030_deng">卡通030(噔噔噔)</string>
  <string name="run_man_sound_033_spring">卡通033(弹簧)</string>
  <string name="run_man_sound_039_fling">卡通039(抛物)</string>
  <string name="run_man_sound_045_dong">卡通045(咚)</string>
  <string name="run_man_sound_050_shuai">卡通045(衰)</string>
  <string name="new_tip">NEW</string>
  <string name="load_history">More</string>
  <string name="network_error">网络未连接</string>
  <string name="sending">SENDING</string>
  <string name="send">SEND</string>
  <string name="choose_montage">选择一个特效</string>
  <string name="freeze">冰冻</string>
  <string name="repeat">重复</string>
  <string name="slow_motion">慢动作</string>
  <string name="forward">快进</string>
  <string name="slow_motion_action_name">0.5倍速</string>
  <string name="record_speed">录制速度</string>
  <string name="fast_action_name">2倍速</string>
  <string name="scale_action_name">调整</string>
  <string name="scale_action_note">大小&amp;旋转</string>
  <string name="invite">邀请好友</string>
  <string name="get_permission">开启权限</string>
  <string name="date">约会</string>
  <string name="picnic">园游会</string>
  <string name="midnight">深夜</string>
  <string name="joy">好心情</string>
  <string name="silent">安静</string>
  <string name="game">游戏</string>
  <string name="sorrow">悲伤</string>
  <string name="romance">浪漫</string>
  <string name="music_box">八音盒</string>
  <string name="fresh">清新</string>
  <string name="funny1">搞笑1</string>
  <string name="funny2">搞笑2</string>
  <string name="lazy">懒猫</string>
  <string name="wechat_git">微信Gif</string>
  <string name="wechat">微信</string>
  <string name="moment">朋友圈</string>
  <string name="weibo">微博</string>
  <string name="qq">QQ</string>
  <string name="qzone">QQ空间</string>
  <string name="sms">短信</string>
  <string name="weixin">微信</string>
  <string name="share_uninstall_app">没有安装这个应用</string>
  <string name="share_app_title">鹿影:视频一秒变综艺!</string>
  <string name="share_app_body">我的鹿影ID是%1$s，快来一起嗨</string>
  <string name="share_video_body">分享\"%1$s(#视频作者)\"的小视频"</string>
  <string name="share_video_moment">%1$s(#视频作者)的鹿影小视频</string>
  <string name="converting">正在合成Gif</string>
  <string name="share_video_weibo">#鹿影＃视频一秒变综艺!这是%1$s(#视频制作者)的小视频,快来制作你自己的小视频吧!</string>
  <string name="feedback_subject">意见反馈来自: Android</string>
  <string name="mail_error">你的手机没有支持发送邮件的服务</string>
  <string name="subtitle_jp_default_tr">この特の私の羊!</string>
  <string name="subtitle_child_name_bottom">底部字幕</string>
  <string name="subtitle_child_name_middle">居中字幕</string>
  <string name="share">分享</string>
  <string name="delete">删除</string>
  <string name="report">举报</string>
  <string name="subtitle_child_name_bottom_jp">底部双语(日)</string>
  <string name="subtitle_child_name_bottom_en">底部双语(英)</string>
  <string name="subtitle_child_name_middle_en">居中双语(英)</string>
  <string name="subtitle_child_name_middle_jp">居中双语(日)</string>
  <string name="subtitle_child_name_black">黑屏字幕</string>
  <string name="subtitle_child_name_black_en">黑屏双语(英)</string>
  <string name="feed_back">建议和反馈</string>
  <string name="edit_profile">修改资料</string>
  <string name="logout">退出登录</string>
  <string name="clear_catch">清除缓存</string>
  <string name="save_video">自动保存我的视频</string>
  <string name="reputation">给鹿影好评</string>
  <string name="setting_sound">预览播放声音</string>
  <string name="back_edit_center_alert_message">确定要放弃辛苦编辑的视频特效吗?</string>
  <string name="confirm">是的</string>
  <string name="cancel">取消</string>
  <string name="undo">回删</string>
  <string name="done_lower_case">完成</string>
  <string name="done">完成</string>
  <string name="record_to_start">点击按钮开始录像</string>
  <string name="record_to_stop">再次点击暂停录像</string>
  <string name="input_too_long">输入的文字过多</string>
  <string name="load_error">视频加载失败</string>
  <string name="tap_to_retry">点击重试</string>
  <string name="file_deleted">文件被删除</string>
  <string name="upload_crop">正在裁剪视频</string>
  <string name="upload_render">正在渲染视频</string>
  <string name="upload_post">正在上传视频</string>
  <string name="album">选择视频</string>
  <string name="local_image">选取本地图片</string>
  <string name="empty">什么都没有</string>
  <string name="choose_local_video">从本地相册选择视频</string>
  <string name="choose_a_video">选择视频</string>
  <string name="subtitle">字幕</string>
  <string name="filter">滤镜</string>
  <string name="runman">综艺体</string>
  <string name="sticker">贴图</string>
  <string name="video_tag">标签</string>
  <string name="chat_box">对话气泡</string>
  <string name="montage">剪辑特效</string>
  <string name="post">发布</string>
  <string name="cellularautoplay">在移动网络自动播放</string>
  <string name="no_wifi_title">没有wifi呢</string>
  <string name="no_wifi_subtitle">是否仍旧自动播放视频？土豪请无视～</string>
  <string name="refuse_play">不自动</string>
  <string name="agree_play">仍自动播</string>
  <string name="register_user_name_too_long">用户名长度超出!</string>
  <string name="register_user_name_is_existed">用户名重复,请修改！</string>
  <string name="sure_block_title">真的要拉黑吗?</string>
  <string name="sure_block_content">拉黑后Ta就不能给你发私信，也不能评论你的视频了。</string>
  <string name="sure_unblock_title">要解除拉黑吗？</string>
  <string name="sure_block">坚决拉黑</string>
  <string name="block_cancle">算了吧</string>
  <string name="sure_unblock">解除！</string>
  <string name="unblock_cancle">继续拉黑</string>
  <string name="user_agreement_note">我已阅读并同意</string>
  <string name="user_agreement">用户协议</string>
  <string name="agree">同意</string>
  <string name="edit_subtitle_hint">输入文字</string>
  <string name="edit_subtitle_translate_note">字幕会在编辑时自动翻译好</string>
  <string name="uploading">正在上传</string>
  <string name="send_comment_hint">写评论...</string>
  <string name="empty_note">什么都没有</string>
  <string name="invite_friend_layout_top_note">邀请朋友一起玩</string>
  <string name="invite_friend_layout_bottom_note">分享生活故事与乐趣</string>
  <string name="mobile_number">手机号登录</string>
  <string name="wechat_account">微信登录</string>
  <string name="your_information">个人信息</string>
  <string name="enter_name_hint">输入昵称</string>
  <string name="join_in">开启</string>
  <string name="run_man">综艺体</string>
  <string name="search_edit_hint">搜索用户</string>
  <string name="security_code">验证码</string>
  <string name="re_send">重发验证码</string>
  <string name="enter_phone_num_hint">输入手机号码</string>
  <string name="get_the_code">获取验证码</string>
  <string name="share_app_note">邀请好友</string>
  <string name="report_note">你确定要举报该视频吗?</string>
  <string name="sure">确定</string>
  <string name="hold_record_note">产案录制</string>
  <string name="record_duration_note">一个18秒的视频</string>
  <string name="videos_suffix"> 的视频</string>
  <string name="block_delete_note">你确定要删除该视频吗?</string>
  <string name="block_report_note">你确定要举报该视频吗?</string>
  <string name="open_record_audio_permission">请前往设置开启鹿影的录音权限！！！</string>
  <string name="open_camera_permission">请前往设置开启鹿影的拍照权限！！！</string>
  <string name="record_time_warn">录制时长小于1s，请重新或继续录制！！！</string>
  <string name="unuploading_photo">没有上传头像！！！</string>
  <string name="no_name">没有名字！！！</string>
  <string name="register_error">注册失败！！！</string>
  <string name="sync_contacts_error">同步通讯录失败，请稍后重试！！！</string>
  <string name="mobile_code_too_fast">请求发送验证码速度太快了！！！</string>
  <string name="mobile_invalid">输入的手机号根本不是一个号啊骚年！！！</string>
  <string name="user_blocked">用户已经封禁！！！</string>
  <string name="mobile_code_wrong">验证码错误！！！</string>
  <string name="mobile_code_expired">验证码过期！！！</string>
  <string name="null_name">用户名不能为空！！！</string>
  <string name="update_information_failure">用户信息修改失败！！！</string>
  <string name="null_tag_content">标签内容不能为空！！！</string>
  <string name="delete_video_failure">删除视频失败！！！</string>
  <string name="null_search_content">搜索内容为空！！！</string>
  <string name="elements_kind">添加特效</string>
  <string name="edit_history">编辑记录</string>
  <string name="using_mobile_network">正在使用移动网络</string>
  <string name="save_to_draft_box">保存到草稿箱</string>
  <string name="click_upload">点击上传</string>
  <string name="clear_cache_tips">全部清空</string>
  <string name="subtitle_length_tips_prefix">还能输入</string>
  <string name="subtitle_length_exceed_tips_prefix">已经超出</string>
  <string name="excitement">激动</string>
  <string name="sos">SOS</string>
  <string name="come_on">come on</string>
  <string name="fire">红红火火</string>
  <string name="subtitle_length_tips_suffix_remains">个字</string>
</resources>