<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".module.videoedit.EffectsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="150dp"
        android:background="@color/black"
        android:orientation="vertical"
        android:focusable="true"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/montage"
            android:textColor="@android:color/white"
            android:textSize="@dimen/addtext_text_size"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/layout_freeze"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                >

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/effects_action_circle_bg"
                    android:src="@drawable/freeze_icon"/>

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/freeze"
                    android:textColor="@color/color_4D4D4D"
                    android:textSize="@dimen/addtext_text_size"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_slow_motion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                >

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/effects_action_circle_bg"
                    android:src="@drawable/slow_icon"/>

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/slow_motion"
                    android:textColor="@color/color_4D4D4D"
                    android:textSize="@dimen/addtext_text_size"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_repeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                >

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/effects_action_circle_bg"
                    android:src="@drawable/repeat_icon"/>

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/repeat"
                    android:textColor="@color/color_4D4D4D"
                    android:textSize="@dimen/addtext_text_size"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_forward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                >

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/effects_action_circle_bg"
                    android:src="@drawable/forward_icon"/>

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/forward"
                    android:textColor="@color/color_4D4D4D"
                    android:textSize="@dimen/addtext_text_size"/>
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>

</FrameLayout>
