<RelativeLayout
  android:id="@+id/bg"
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/dialog_bg"
  >

  <RelativeLayout
    android:id="@+id/more_layout"
    android:layout_width="match_parent"
    android:layout_height="165dp"
    android:layout_centerInParent="true"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:background="@drawable/dialog_bg">

    <ImageView
      android:id="@+id/warn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="25dp"
      android:layout_marginTop="30dp"
      android:scaleType="centerInside"
      android:src="@drawable/warn"/>


      <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="25dp"
        android:layout_toRightOf="@+id/warn"
        android:layout_marginTop="30dp">

        <TextView
          android:id="@+id/block_or_unblock_title"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_centerVertical="true"
          android:layout_marginLeft="20dp"
          android:layout_marginTop="10dp"
          android:text="@string/back_edit_center_alert_message"
          android:lineSpacingExtra="10dp"
          android:textColor="@color/black"
          android:textSize="19sp"/>

      </RelativeLayout>

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25dp"
        android:orientation="horizontal"
        >

        <LinearLayout
          android:id="@+id/cancle"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:gravity="center">

          <TextView
            android:id="@+id/cancle_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textSize="20sp"/>
        </LinearLayout>

        <TextView
          android:layout_width="2dp"
          android:layout_height="20dp"
          android:background="@color/light_gray"/>

        <LinearLayout
          android:id="@+id/sure"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:gravity="center">

          <TextView
            android:id="@+id/sure_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:textColor="@color/dark_blue"
            android:textSize="20sp"/>
        </LinearLayout>

      </LinearLayout>
  </RelativeLayout>

</RelativeLayout>
